# magic-cave-calendars

./: .env.example  .gitignore  AGENTS.md  README.md  deployment_log.txt  dev-setup.sh  docker-compose.yml  enhanced-strategic-phases.md  eslint.config.js  eslint_output.txt  eslint_output_new.txt  folder-structure.mdc  index.html  manual_deployment_guide.md  package-lock.json  package.json  vitest.config.ts
.github/: dependabot.yml
chat_sessions/: 156b77ba-b334-4eee-8d46-2e5f670ed92a.json  b623e388-39ad-4a46-9af3-adf9a023dfdf.json
config/: chat-system-prompt.txt
functions/: chat-sessions.js  chat-with-daddy.mjs
photos/: 02f83ac2-ae7a-4bfb-a3e1-ec55ae3c2812 (1)_processed.json  02f83ac2-ae7a-4bfb-a3e1-ec55ae3c2812 (1)_processed.md  29fbe516-5c8a-412d-8e0a-12e5a8e2fc62_processed.json  71887597432__3853ADEF-D816-457C-905C-39748182AD69_processed.json  (+3 more)
services/intelligence/: pyproject.toml  wrangler.toml
services/intelligence/advent_intelligence.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/intelligence/src/: __init__.py  settings.py
services/intelligence/src/api/: http_server.py  schemas.py
services/intelligence/src/core/: chat_engine.py  content_generator.py  memory_manager.py  persona_builder.py
services/intelligence/src/integrations/: openai_client.py
services/intelligence/src/prompts/calendar/: base.md
services/intelligence/src/prompts/interactive_game/: base.md
services/intelligence/src/prompts/parent_chat/: base.md  custom_variant.md  daddy_variant.md  mummy_variant.md
services/intelligence/src/prompts/storybook/: base.md
(+240 files in other folders)
